# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2017-02-02 mmichaud <m.michael.michaud@orange.fr>
  * Upgrade csv-driver to 1.0.0 (encoding option to writer + other improvements)

2017-02-02 mmichaud <m.michael.michaud@orange.fr>
  * Restore ZoomToWMSPlugIn capabilities in more recent ZoomToWMSLayerPlugIn
  * WMSStylePlugIn dialog did not close (related to Fix #453)

* release 1.10 *****************************************************************

2017-01-27 mmichaud <m.michael.michaud@orange.fr>
  * Fix #453 about closing ChangeRasterStyle dialog (related to #433)

2017-01-21 mmichaud <m.michael.michaud@orange.fr>
  * FR 252 : Add a PlugIn to search for a command (menu Help)
  * Update CTSPlugIn to 0.1.3 for OJ 1.10 (SuggestTree is now factorized in OJ)

2017-01-17 mmichaud <m.michael.michaud@orange.fr>
  * Upgrade GraphToolBox to 0.4.0 for PLUS version

2017-01-11 mmichaud <m.michael.michaud@orange.fr>
  * Prevent addition of a second attribute with the same name in FeatureSchema

2017-01-08 ede
  * fix #450: Zoombar/Edittoolbox checkbox menu item de-synchronized when
    toolbar is closed manually

2017-01-04 ede
  * PLUS add Map Coloring Plugin 0.5 (style by Five Color Theorem)

2017-01-03 mmichaud <m.michael.michaud@orange.fr>
  * Update Aggregation extension to 0.2.10 (fix bug in dialog initialization)

2016-12-30 Giuseppe Aruta <giuseppe_aruta@yahoo.it>
  * Updated Italian and Spanish Language files

2016-12-28 ede
  * make GML/JML reader cancellable and show already parsed featcount
  * upgrade to commons-io 2.5, commons-codec 1.10, commons-compress 1.12
    release notes assure backwards compatibility afa we are concerned

2016-12-28 mmichaud <m.michael.michaud@orange.fr>
  * fix #449 severe regression in "save project as" introduced in r5178
