@@ -555,7 +555,7 @@ org.openjump.core.ui.plugin.datastore.transaction.TransactionManagerPanel.inspec
 org.openjump.core.ui.plugin.datastore.transaction.TransactionManagerPanel.update = Mettre \u00e0 jour
 org.openjump.core.ui.plugin.datastore.transaction.TransactionManagerPanel.update-tooltip = Mettre \u00e0 jour les couches \u00e0 partir de la base de donn\u00e9es
 org.openjump.core.ui.plugin.datastore.transaction.TransactionManagerPanel.layer-with-irrelevant-datastore-datasource = Le gestionnaire de transaction contient une couche non appropri\u00e9e
-org.openjump.core.ui.plugin.datastore.transaction.TransactionManagerPanel.creations = {0} cr\u00e9ations
+org.openjump.core.ui.plugin.datastore.transaction.TransactionManagerPanel.creations = {0} cr\u00e9ation(s)
 org.openjump.core.ui.plugin.datastore.transaction.TransactionManagerPanel.modifications = {0} modification(s)
 org.openjump.core.ui.plugin.datastore.transaction.TransactionManagerPanel.suppressions = {0} suppression(s)
 org.openjump.core.ui.plugin.edit.ClipToFencePlugIn.Clip-Map-to-Fence = D\u00e9couper sur le cadre
