@@ -1,7 +1,6 @@
 package org.openjump.core.ui.plugin.datastore.transaction;
 
 import java.util.Arrays;
-import java.util.Set;
 
 import com.vividsolutions.jump.I18N;
 import com.vividsolutions.jump.feature.Feature;
@@ -16,15 +15,15 @@ public class Evolution {
 
     private final static String KEY = Evolution.class.getName();
 
-    public static enum Type {CREATION, MODIFICATION, SUPPRESSION}
+    public enum Type {CREATION, MODIFICATION, SUPPRESSION}
 
-    Type type;
-    Set<Integer> modifications;
+    private Type type;
+    // Set<Integer> modifications;
     // newFeature is null for a suppression
-    Feature newFeature;
+    private Feature newFeature;
     // oldFeature contains old values used for conflict resolution
     // It is null for a creation
-    Feature oldFeature;
+    private Feature oldFeature;
 
     private Evolution(Type type, Feature feature, Feature old) {
         assert type.equals(Type.CREATION) && oldFeature == null && feature != null ||
@@ -72,17 +71,21 @@ public class Evolution {
         Feature evo2New = this.getNewFeature();
         Evolution.Type type2 = this.getType();
 
+        // Before merging two evolutions, check that the final state of the first one
+        // has the same attributes as the initial state of the second
         if (type1 != Type.SUPPRESSION && type2 != Type.CREATION &&
                 !Arrays.equals(evo1New.getAttributes(), evo2Old.getAttributes())) {
-            Logger.info("Try to merge : " + previous);
-            Logger.info("        with : " + this);
-            throw new EvolutionOperationException(KEY + I18N.get(".cannot-merge-non-consecutive-evolutions"));
+            Logger.info("Try to merge evolution  : " + previous);
+            Logger.info(" which final state is   : " + Arrays.toString(evo1New.getAttributes()));
+            Logger.info("        with evolution  : " + this);
+            Logger.info(" which initial state is : " + Arrays.toString(evo2Old.getAttributes()));
+            throw new EvolutionOperationException(I18N.get(KEY + ".cannot-merge-non-consecutive-evolutions"));
         }
 
         // previous evolution was a CREATION
         if (type1 == Type.CREATION) {
             switch (type2) {
-                case CREATION : throw new EvolutionOperationException(KEY + I18N.get(".cannot-merge-2-creations") +
+                case CREATION : throw new EvolutionOperationException(I18N.get(KEY + ".cannot-merge-2-creations") +
                         " (" + previous.getNewFeature().getID() + " - " + getNewFeature().getID() + ")");
                 case MODIFICATION : return Evolution.createCreation(evo2New);
                 case SUPPRESSION : return null;
@@ -92,7 +95,7 @@ public class Evolution {
         // previous evolution was a MODIFICATION
         else if (type1 == Type.MODIFICATION) {
             switch (type2) {
-                case CREATION : throw new EvolutionOperationException(KEY + I18N.get(".cannot-merge-a-modification-with-a-creation"));
+                case CREATION : throw new EvolutionOperationException(I18N.get(KEY + ".cannot-merge-a-modification-with-a-creation"));
                 case MODIFICATION :
                     boolean unchanged = Arrays.equals(evo1Old.getAttributes(), evo2New.getAttributes());
                     return unchanged ? null : Evolution.createModification(evo2New, evo1Old);
@@ -105,10 +108,12 @@ public class Evolution {
             switch (type2) {
                 // This can happen with the undo/redo command
                 case CREATION :
+                    Logger.debug("State before deletion " + Arrays.toString(evo1Old.getAttributes()));
+                    Logger.debug("State after creation  " + Arrays.toString(evo2New.getAttributes()));
                     boolean unchanged = Arrays.equals(evo1Old.getAttributes(), evo2New.getAttributes());
                     return unchanged ? null : Evolution.createModification(evo2New, evo1Old);
-                case MODIFICATION : throw new EvolutionOperationException(KEY + I18N.get(".cannot-merge-a-suppression-with-a-modification"));
-                case SUPPRESSION : throw new EvolutionOperationException(KEY + I18N.get(".cannot-merge-a-suppression-with-a-suppression"));
+                case MODIFICATION : throw new EvolutionOperationException(I18N.get(KEY + ".cannot-merge-a-suppression-with-a-modification"));
+                case SUPPRESSION : throw new EvolutionOperationException(I18N.get(KEY + ".cannot-merge-a-suppression-with-a-suppression"));
                 default : return null;
             }
         }
@@ -116,9 +121,9 @@ public class Evolution {
     }
 
     public String toString() {
-        if (type == Type.CREATION) return "Creation: " + newFeature;
-        if (type == Type.SUPPRESSION) return "Suppression: " + oldFeature;
-        else return "Change from:" + oldFeature + "\nto: " + newFeature;
+        if (type == Type.CREATION) return "Creation: fid=" + newFeature.getID();
+        if (type == Type.SUPPRESSION) return "Suppression: fid=" + oldFeature.getID();
+        else return "Change from: fid=" + oldFeature.getID() + "to: fid=" + newFeature.getID();
     }
 
 }
