@@ -10,6 +10,7 @@ import com.vividsolutions.jump.feature.Feature;
 import com.vividsolutions.jump.feature.FeatureUtil;
 import com.vividsolutions.jump.workbench.WorkbenchContext;
 import com.vividsolutions.jump.workbench.model.Layer;
+import com.vividsolutions.jump.workbench.model.UndoableCommand;
 import com.vividsolutions.jump.workbench.plugin.PlugInContext;
 import com.vividsolutions.jump.workbench.ui.EditTransaction;
 import com.vividsolutions.jump.workbench.ui.SelectionManager;
@@ -30,41 +31,28 @@ import java.util.List;
 import javax.swing.Icon;
 import javax.swing.JOptionPane;
 
-  
-  /*
-   * Giuseppe Aruta Dec 4 2015
-   * This tool partially derives from SplitPolygonPlugIn.class from Kosmo SAIG
-   * It has been modified to be used both with selected Linestrings and Polygons.
-   * It works only with one editable/selectable layer, already selected on layer list
-   * A warning message will points, multigeometries or geometry collections are 
-   */
-  
+/*
+ * Giuseppe Aruta Dec 4 2015
+ * This tool partially derives from SplitPolygonPlugIn.class from Kosmo SAIG
+ * It has been modified to be used both with selected Linestrings and Polygons.
+ * It works only with one editable/selectable layer, already selected on layer list
+ * A warning message will points, multigeometries or geometry collections are
+ */
   
   
-  public class CutFeaturesTool
-    extends MultiClickTool {
-
-    Geometry geomSelected = null;
-    Geometry geomDraw = null;
-
-//    public CutFeaturesTool(EnableCheckFactory checkFactory) {
-//    }
-
-    PlugInContext context;
+public class CutFeaturesTool extends MultiClickTool {
 
     public CutFeaturesTool(PlugInContext context) {
-      this.context = context;
       setColor(Color.red);
-      setStroke(new BasicStroke(1.5f,                      // Width
+      setStroke(new BasicStroke(1.5f,    // Width
               BasicStroke.CAP_SQUARE,    // End cap
               BasicStroke.JOIN_ROUND,    // Join style
               10.0f,                     // Miter limit
-              new float[]{10.0f, 5.0f}, // Dash pattern
+              new float[]{10.0f, 5.0f},  // Dash pattern
               0.0f));
       allowSnapping();
       setMetricsDisplay(new CoordinateListMetrics());
     }
-
 
     public Icon getIcon() {
       return IconLoader.icon("splitPolygon.png");
@@ -78,10 +66,12 @@ import javax.swing.JOptionPane;
       return createCursor(IconLoader.icon("splitPolygonCursor.png").getImage());
     }
 
+    protected void gestureFinished() throws Exception {
 
-    protected void gestureFinished()
-            throws Exception {
       WorkbenchContext context = getWorkbench().getContext();
+      Geometry geomSelected;
+      Geometry cuttingLine;
+
       reportNothingToUndoYet();
 
       SelectionManager selectionManager = context.getLayerViewPanel().getSelectionManager();
@@ -89,64 +79,93 @@ import javax.swing.JOptionPane;
       for (Layer activeLayer : selectionManager.getLayersWithSelectedItems()) {
         if (!activeLayer.isEditable()) {
           JOptionPane.showMessageDialog(null,
-                  I18N.getMessage("plugin.EnableCheckFactory.selected-items-layers-must-be-editable",
-                          new Object[]{Integer.valueOf(1)}), I18N.get("org.openjump.core.ui.plugin.edittoolbox.Information"),
-                  1);
+                  I18N.getMessage("plugin.EnableCheckFactory.selected-items-layers-must-be-editable", 1),
+                  I18N.get("org.openjump.core.ui.plugin.edittoolbox.Information"), 1);
           return;
         }
       }
 
       for (Layer activeLayer : selectionManager.getLayersWithSelectedItems()) {
-        if (activeLayer.isEditable()) {
-          Collection selectedFeatures = context.getLayerViewPanel()
-                  .getSelectionManager().getFeaturesWithSelectedItems(activeLayer);
-          EditTransaction edtr = new EditTransaction(new ArrayList(), "cut polygon", activeLayer, true, true, context.getLayerViewPanel());
-          for (Iterator k = selectedFeatures.iterator(); k.hasNext(); ) {
-            Feature featureSelected = (Feature) k.next();
-            this.geomSelected = featureSelected.getGeometry();
-            this.geomDraw = getLineString();
-            if ((this.geomSelected.isEmpty())) {
-              return;
-            }
-            if (this.geomSelected.contains(this.geomDraw)) {
-              return;
-            }
-            if ((this.geomSelected.getClass().getSimpleName().equals("GeometryCollection"))) {
-              context.getWorkbench().getFrame().warnUser(
-                      I18N.get("org.openjump.core.ui.plugin.tools.CutFeaturesTool.geometryCollection-cannot-be-processed"));
-            }
-            else if (this.geomDraw.intersects(this.geomSelected)) {
-              if (this.geomSelected instanceof Polygon || this.geomSelected instanceof MultiPolygon) {
-                edtr.deleteFeature(featureSelected);
-                List<Geometry> div = splitPolygon(this.geomDraw, this.geomSelected);
-                for (Geometry geom : div) {
-                  Feature featureIntersect = featureSelected.clone(true);
-                  FeatureUtil.copyAttributes(featureSelected, featureIntersect);
-                  featureIntersect.setGeometry(geom);
-                  edtr.createFeature(featureIntersect);
-                }
-              } else if (this.geomSelected instanceof LineString || this.geomSelected instanceof MultiLineString) {
-                edtr.deleteFeature(featureSelected);
-                List<Geometry> div = splitLines(this.geomDraw, this.geomSelected);
-                for (Geometry geom : div) {
-                  Feature featureIntersect = featureSelected.clone(true);
-                  FeatureUtil.copyAttributes(featureSelected, featureIntersect);
-                  featureIntersect.setGeometry(geom);
-                  edtr.createFeature(featureIntersect);
+        activeLayer.getLayerManager().getUndoableEditReceiver().startReceiving();
+        try {
+          List<Feature> addedFeatures = new ArrayList<>();
+          List<Feature> removedFeatures = new ArrayList<>();
+          if (activeLayer.isEditable()) {
+            Collection<Feature> selectedFeatures = context.getLayerViewPanel()
+                    .getSelectionManager().getFeaturesWithSelectedItems(activeLayer);
+            //EditTransaction edtr = new EditTransaction(new ArrayList(), "cut polygon", activeLayer, true, true, context.getLayerViewPanel());
+            for (Feature featureSelected : selectedFeatures) {
+              geomSelected = featureSelected.getGeometry();
+              cuttingLine = getLineString();
+              if ((geomSelected.isEmpty())) {
+                continue;
+              }
+              if (geomSelected.contains(cuttingLine)) {
+                continue;
+              }
+              if ((geomSelected.getClass().getSimpleName().equals("GeometryCollection"))) {
+                context.getWorkbench().getFrame().warnUser(
+                        I18N.get("org.openjump.core.ui.plugin.tools.CutFeaturesTool.geometryCollection-cannot-be-processed"));
+              }
+              else if (cuttingLine.intersects(geomSelected)) {
+                if (geomSelected instanceof Polygon || geomSelected instanceof MultiPolygon) {
+                  removedFeatures.add(featureSelected);
+                  //edtr.deleteFeature(featureSelected);
+                  List<Geometry> div = splitPolygon(cuttingLine, geomSelected);
+                  for (Geometry geom : div) {
+                    Feature featureIntersect = featureSelected.clone(true);
+                    FeatureUtil.copyAttributes(featureSelected, featureIntersect);
+                    featureIntersect.setGeometry(geom);
+                    //edtr.createFeature(featureIntersect);
+                    addedFeatures.add(featureIntersect);
+                  }
+                } else if (geomSelected instanceof LineString || geomSelected instanceof MultiLineString) {
+                  removedFeatures.add(featureSelected);
+                  //edtr.deleteFeature(featureSelected);
+                  List<Geometry> div = splitLines(cuttingLine, geomSelected);
+                  for (Geometry geom : div) {
+                    Feature featureIntersect = featureSelected.clone(true);
+                    FeatureUtil.copyAttributes(featureSelected, featureIntersect);
+                    featureIntersect.setGeometry(geom);
+                    //edtr.createFeature(featureIntersect);
+                    addedFeatures.add(featureIntersect);
+                  }
+                } else {
+                  // Point, MultiPoint, GeometryCollection : don't modify the selected feature
                 }
               } else {
-            	// Point, MultiPoint, GeometryCollection : don't modify the selected feature
+                // No intersection : don't modify the selected feature
               }
-            } else {
-              // No intersection : don't modify the selected feature
             }
+            context.getLayerViewPanel().getSelectionManager().unselectItems(activeLayer);
+            //edtr.commit();
+            //edtr.clearEnvelopeCaches();
+            UndoableCommand command = createCommand(activeLayer, removedFeatures, addedFeatures);
+            command.execute();
+            activeLayer.getLayerManager().getUndoableEditReceiver().receive(command.toUndoableEdit());
           }
-          context.getLayerViewPanel().getSelectionManager().unselectItems(activeLayer);
-          edtr.commit();
-          edtr.clearEnvelopeCaches();
+        }
+        finally {
+          activeLayer.getLayerManager().getUndoableEditReceiver().stopReceiving();
         }
       }
       //}
+    }
+
+    private UndoableCommand createCommand(final Layer layer,
+                                  final Collection<Feature> removedFeatures,
+                                  final Collection<Feature> addedFeatures) {
+      return new UndoableCommand(getName()) {
+        public void execute() {
+          layer.getFeatureCollectionWrapper().removeAll(removedFeatures);
+          layer.getFeatureCollectionWrapper().addAll(addedFeatures);
+        }
+
+        public void unexecute() {
+          layer.getFeatureCollectionWrapper().removeAll(addedFeatures);
+          layer.getFeatureCollectionWrapper().addAll(removedFeatures);
+        }
+      };
     }
 
     protected boolean isRollingBackInvalidEdits(WorkbenchContext context) {
@@ -188,7 +207,7 @@ import javax.swing.JOptionPane;
     public static List<Geometry> splitPolygon(Geometry digitizedGeometry, Geometry geomSel)
             throws Exception {
       // Create linearNetwork with selected geometry linear components and digitized linestring
-      List<Geometry> linearNetwork = new ArrayList();
+      List<Geometry> linearNetwork = new ArrayList<>();
       linearNetwork.addAll(LinearComponentExtracter.getLines(digitizedGeometry));
       linearNetwork.addAll(LinearComponentExtracter.getLines(geomSel));
       Geometry nodedLinearNetwork = UnaryUnionOp.union(linearNetwork);
@@ -206,7 +225,7 @@ import javax.swing.JOptionPane;
       double maxAbsY = Math.max(Math.abs(env.getMaxY()), Math.abs(env.getMinY()));
       Geometry buffer = geomSel.buffer(Math.ulp(Math.max(maxAbsX, maxAbsY))*1000);
       Iterator<Geometry> it = polys.iterator();
-      List<Geometry> result = new ArrayList<Geometry>();
+      List<Geometry> result = new ArrayList<>();
       while (it.hasNext()) {
         Geometry geometry = it.next();
         if ((buffer.contains(geometry))) {
@@ -222,7 +241,7 @@ import javax.swing.JOptionPane;
 
     public static List<Geometry> splitLines(Geometry digitizedGeometry, Geometry geomSel) throws Exception {
     // Create linearNetwork with selected geometry linear components and digitized linestring
-      List<Geometry> linearNetwork = new ArrayList();
+      List<Geometry> linearNetwork = new ArrayList<>();
       linearNetwork.addAll(LinearComponentExtracter.getLines(digitizedGeometry));
       linearNetwork.addAll(LinearComponentExtracter.getLines(geomSel));
       Geometry nodedLinearNetwork = UnaryUnionOp.union(linearNetwork);
@@ -234,7 +253,7 @@ import javax.swing.JOptionPane;
       double maxAbsX = Math.max(Math.abs(env.getMaxX()), Math.abs(env.getMinX()));
       double maxAbsY = Math.max(Math.abs(env.getMaxY()), Math.abs(env.getMinY()));
       Geometry buffer = geomSel.buffer(Math.ulp(Math.max(maxAbsX, maxAbsY))*1000);
-      List<Geometry> result = new ArrayList<Geometry>();
+      List<Geometry> result = new ArrayList<>();
       for (int i = 0 ; i < nodedLinearNetwork.getNumGeometries() ; i++) {
         Geometry geometry = nodedLinearNetwork.getGeometryN(i);
         if ((buffer.contains(geometry))) {
